# sports-sync-x

./: .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  x-sync.py
.github/workflows/: sports-sync.yml
app/coros/: coros_client.py  region_config.py
app/database/: db.py  db_api.py
app/garmin/: gamin_client.py  gamin_client_cn.py  gamin_client_com.py  garmin_client.py  garmin_client_x.py
app/oss/: ali_oss_client.py  aws_oss_client.py
app/sync_fn/: sync_fn.py
app/utils/: const.py  coros_oss_credients_utils.py  fit_parser.py  msg_tool.py  sys_config.py  tools.py
tests/: db_test_x.py  test_coros.py  test_garmin.py  tools_test.py
